--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 	            <img src="http://placehold.it/320x150" alt="">
 	            <div class="caption">
 	                <h4 class="pull-right">R$ <%= produto.price %></h4>
-	                <h4><a href="#"><%= produto.name %></a></h4>
+	                <h4><a href="/product/<%= produto.ref %>"><%= produto.name %></a></h4>
 	                <p><%= produto.description %></p>
 	            </div>
 	            <div class="ratings">
