--- a/views/layout-detail.ejs
+++ b/views/layout-detail.ejs
@@ -48,11 +48,11 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <form class="form" method="get" action="/search">
+                        <form class="form">
                             <div class="input-group input-group-lg">
-                              <input type="text" class="form-control" name="s" placeholder="Look for your product here" />
+                              <input type="text" class="form-control" placeholder="Look for your product here" />
                               <span class="input-group-btn">
-                                <button type="submit" class="btn btn-default btn-warning" type="button">
+                                <button class="btn btn-default btn-warning" type="button">
                                     <span class="glyphicon glyphicon-search"></span>
                                 </button>
                               </span>
@@ -62,36 +62,6 @@
                 </div><!-- .row search -->
                 <br/>
 
-                <div class="row carousel-holder">
-
-                    <div class="col-md-12">
-                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="item active">
-                                    <img class="slide-image" src="http://placehold.it/870x300" alt="">
-                                </div>
-                                <div class="item">
-                                    <img class="slide-image" src="http://placehold.it/870x300" alt="">
-                                </div>
-                                <div class="item">
-                                    <img class="slide-image" src="http://placehold.it/870x300" alt="">
-                                </div>
-                            </div>
-                            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                                <span class="glyphicon glyphicon-chevron-left"></span>
-                            </a>
-                            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                                <span class="glyphicon glyphicon-chevron-right"></span>
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
 
                 <%-content%> 
 
